name:           yi-cocoa
version:        0.6.3.0
category:       Development, Editor
synopsis:       Cocoa UI for Yi
description:
  The Cocoa UI frontend for the Yi editor.
license:        GPL
license-file:   LICENSE
author:         AUTHORS
maintainer:     yi-devel@googlegroups.com
homepage:       http://haskell.org/haskellwiki/Yi
bug-reports:    http://code.google.com/p/yi-editor/issues/list
Cabal-Version:  >= 1.10
tested-with:    GHC==7.0.2
build-type:     Simple

library
  hs-source-dirs: src
  exposed-modules:
    Yi.UI.Cocoa
  other-modules:
    Yi.UI.Cocoa.Application
    Yi.UI.Cocoa.TextStorage
    Yi.UI.Cocoa.TextView
    Yi.UI.Cocoa.Utils
  build-depends:
    base >= 4 && < 5,
    containers,
    filepath >= 1.1 && < 1.3,
    monads-fd >= 0.1.0.1,
    pointedlist >= 0.3.5 && < 0.4,
    yi == 0.6.3.0,

    -- Cocoa dependencies
    HOC,
    HOC-AppKit,
    HOC-Foundation
